<resources>
    <string name="app_name">Data Cruise</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="OneFragment">Fragment One</string>
    <string name="TwoFragment">Fragment Two</string>

    <string name="switchHC">"HC-" only</string>
    <string name="reload_List">Reload</string>
    <string name="contentDescriptionLogo">App Logo</string>
    <string name="connect">Connect</string>
    <string name="currentDevice">Current device</string>
    <string name="selectDevice">Please select an arduino device to connect</string>
    <string name="menuDeviceString">%1s (%2s)</string>

    <string name="runtimeString">Runtime</string>
    <string name="pedalString">Pedal Position</string>
    <string name="environmentString">Environment</string>
    <string name="vMaxString">V-Max</string>
    <string name="accelerationString">Acceleration</string>
    <string name="engineLoadString">Engine Load</string>
    <string name="temperatureString">Temperature</string>
    <string name="shiftString">Shift</string>
    <string name="drehzahl">Rpm</string>

    <string name="runtimeContent">%1s\nminutes</string>
    <string name="pedalContent">%1s %%</string>
    <string name="environmentContent">%1s °C</string>

    <string name="vMaxContent">%1s km/h</string>
    <string name="engineLoadContent">%1s %%</string>
    <string name="temperatureContent">%1s °C</string>
    <string name="rpmContent">%1s rpm</string>


    <string name="welcomeDiagTitle">Welcome!</string>
    <string name="welcomeDiagMsg">In order to maximize the time you will be able to enjoy using our app, please agree to not control your phone while driving\n\nHanno, Dennis, Laslo and Marco</string>
    <string name="welcomeButtonAccept">Will do so!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
