<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/oneFrag"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OneFragment">


    <com.github.anastr.speedviewlib.SpeedView
        android:id="@+id/speedometer_eco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:sv_centerCircleColor="@color/colorPrimary"
        app:sv_highSpeedColor="@color/colorPrimary"
        app:sv_indicatorColor="@color/lightGrey"
        app:sv_lowSpeedColor="@color/colorPrimary"
        app:sv_lowSpeedPercent="21"
        app:sv_mediumSpeedColor="@color/lightGreen"
        app:sv_mediumSpeedPercent="46"
        app:sv_speedTextColor="@color/colorPrimary"
        app:sv_speedTextSize="30sp"
        app:sv_textColor="@color/colorPrimary"
        app:sv_unit="rpm"
        app:sv_unitTextColor="@color/colorPrimary" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:ellipsize="start"
        android:gravity="center"
        android:hint="@string/runtimeString"
        android:textAlignment="center"
        app:boxBackgroundColor="@color/lightGreen"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:hintTextColor="@color/darkGreen"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout7"
        app:layout_constraintEnd_toStartOf="@+id/textInputLayout5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/runtime"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="false"
            android:cursorVisible="false"
            android:ellipsize="start"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="center"
            android:inputType="textMultiLine"
            android:textAlignment="center"
            android:textColor="@color/darkGreen"
            android:textSize="27sp"
            app:fontFamily="@font/abel_regular" />


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/pedalString"
        android:textAlignment="center"
        app:boxBackgroundColor="@color/lightGreen"
        app:hintEnabled="true"
        app:hintTextColor="@color/darkGreen"
        app:layout_constraintBottom_toTopOf="@+id/image_shift"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textInputLayout6"
        app:layout_constraintTop_toTopOf="@+id/guideline2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_pedal"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="false"
            android:cursorVisible="false"
            android:ellipsize="start"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="center"
            android:inputType="textMultiLine"
            android:textAlignment="center"
            android:textColor="@color/darkGreen"
            android:textSize="27sp"
            app:fontFamily="@font/abel_regular" />


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/environmentString"
        android:textAlignment="center"
        app:boxBackgroundColor="@color/lightGreen"
        app:hintEnabled="true"
        app:hintTextColor="@color/darkGreen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/image_shift"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout6">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_remaining"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="false"
            android:cursorVisible="false"
            android:ellipsize="start"
            android:focusable="false"
            android:focusableInTouchMode="false"
            app:fontFamily="@font/abel_regular"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/darkGreen"
            android:textSize="27sp"

            />


    </com.google.android.material.textfield.TextInputLayout>


    <ImageView
        android:id="@+id/image_shift"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:adjustViewBounds="true"
        android:hint="@string/shiftString"
        android:src="@drawable/shift_ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textInputLayout7"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="300dp" />


</androidx.constraintlayout.widget.ConstraintLayout>