<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/twoFrag"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TwoFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".MainActivity">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.github.anastr.speedviewlib.ProgressiveGauge
                        android:id="@+id/speedometer_sport"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_margin="10dp"
                        app:sv_speedTextPosition="BOTTOM_RIGHT"
                        app:sv_withTremble="false"


                        />


                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:hint="@string/vMaxString">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/text_v_max"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:clickable="false"
                            android:cursorVisible="false"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:textColor="@color/materialRed"
                            android:textColorHint="@color/materialRed"
                            android:textSize="40sp"
                            android:textAlignment="center"

                            />


                    </com.google.android.material.textfield.TextInputLayout>


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:hint="@string/drehzahl">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/text_rpm"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:clickable="false"
                            android:cursorVisible="false"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:textColor="@color/materialRed"
                            android:textColorHint="@color/materialRed"
                            android:textSize="40sp"
                            android:textAlignment="center"

                            />


                    </com.google.android.material.textfield.TextInputLayout>


                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_weight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:hint="@string/engineLoadString">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/text_engine_load"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:clickable="false"
                            android:cursorVisible="false"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:textColor="@color/materialRed"
                            android:textColorHint="@color/materialRed"
                            android:textSize="40sp"
                            android:textAlignment="center"

                            />


                    </com.google.android.material.textfield.TextInputLayout>


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:hint="@string/temperatureString">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/text_temperature"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:clickable="false"
                            android:cursorVisible="false"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:textColor="@color/materialRed"
                            android:textColorHint="@color/materialRed"
                            android:textSize="40sp"
                            android:textAlignment="center"

                            />


                    </com.google.android.material.textfield.TextInputLayout>


                </RelativeLayout>

            </LinearLayout>


        </LinearLayout>


    </RelativeLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>